--- a/InsureYouAI/InsureYouAI.csproj
+++ b/InsureYouAI/InsureYouAI.csproj
@@ -1,12 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>94de3617-68f8-408c-b7fc-da8d388df018</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\" />
     <Folder Include="Requirements\" />
     <Folder Include="wwwroot\snacked\ltr\assets\plugins\nicescroll\css\" />
     <Folder Include="wwwroot\snacked\rtl\assets\plugins\nicescroll\css\" />
